Finally fix the row direction and button position and spacing

--- a/Project/cat/src/App.css
+++ b/Project/cat/src/App.css
@@ -80,14 +80,19 @@
 }
 
 .attribute-buttons {
-  margin: 0 2px;
+  margin: 0 3px;
+  padding: 10px;
   background-color: #7b663bf0;
   box-shadow: 0 3px #7e4b0d;
 }
 
 .attributes {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.cat-image {
+  margin-top: 30px;
 }
